--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,8 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: navy;
 }
 
 #renderCanvas {
@@ -23,4 +25,232 @@ body {
   line-height: 35px;
   color: #ca7497;
   font-size: 16px;
+}
+
+
+
+#topnavbar{
+ background-color:rgb(10, 77, 133);
+  height: 60px;
+  margin: 0;
+ position: fixed;
+ width: 100%;
+ display: flex;
+}
+
+form {padding: 15px;}
+
+#sidebar{
+  background-color:silver;
+  height: 100%;
+  margin-top: 60px;
+  overflow: auto;
+ width: 100%;
+z-index: 8000;
+
+
+}
+footer{
+  background-color:rgb(9, 9, 94);
+  height: 60px;
+  width: 100%;
+  margin: 0;
+  position: absolute;
+ bottom: 0px;
+ color:thistle;
+
+ font-size: 1.1rem;
+}
+footer div{
+  position: absolute;
+  right: 40px;
+  bottom: 20px;
+}
+
+#progressBar {
+  position: absolute;
+  bottom:0px;
+  left: 0px;
+  width: 100%;
+  accent-color:green;
+  background-color: navy;
+  background:navy;
+  display: none;
+  z-index: 9999;
+}
+
+.gridjs-wrapper{
+margin-bottom: 50px;
+border: 0px;
+border-radius:0px !important;
+}
+
+#uploadbutton{
+  background-color:darkgreen;  color: whitesmoke; border: 1px solid teal; padding-block: 5px; border-radius: 4px;
+}
+#uploadbutton:hover{
+  background-color:seagreen;
+}
+
+input::file-selector-button {
+  cursor: pointer;
+  background-color:rgb(58, 26, 148);  color: whitesmoke; border: 1px solid teal; padding-block: 5px; border-radius: 4px;
+}
+input::file-selector-button:hover{
+  color:tomato
+}
+#inputchoose {
+  cursor: pointer;
+ color:tan; background-color: transparent;
+}
+#inputchoose:hover {
+  color:tomato
+  }
+
+  .button-3 {
+    appearance: none;
+    background-color: #2ea44f;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
+  }
+  
+  .button-3:focus:not(:focus-visible):not(.focus-visible) {
+    box-shadow: none;
+    outline: none;
+  }
+  
+  .button-3:hover {
+    background-color: #2c974b;
+  }
+  
+  .button-3:focus {
+    box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+    outline: none;
+  }
+  
+  .button-3:disabled {
+    background-color: #94d3a2;
+    border-color: rgba(27, 31, 35, .1);
+    color: rgba(255, 255, 255, .8);
+    cursor: default;
+  }
+  
+  .button-3:active {
+    background-color: #298e46;
+    box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+  }
+
+  .testClass{
+    background-color:lightgray;
+    color:whitesmoke;
+    width: 300px;
+    height: 300px;
+  }
+
+  
+  .testClass2{
+    background-color:chocolate;
+    color:whitesmoke;
+
+  }
+
+  .checkClass{
+ 
+    position: relative;
+    padding-left: 80px;
+    padding-top: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    color: thistle;
+   
+  }
+
+  .checkClass input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 20px;
+  left: 40px;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.checkClass:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkClass input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkClass input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkClass .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#centerblock{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  display: none;
+}
+.insidebar{
+  padding: 10px 15px 10px 15px;
+  font-size: 1.3rem;
+  color: darkslategrey;
 }
