--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 html,
 body {
   overflow: hidden;
@@ -10,9 +10,9 @@ body {
 }
 
 #renderCanvas {
-  width: 100%;
-  height: 100%;
   touch-action: none;
+  outline: none;
+  position: absolute;
 }
 
 #display-fps {
@@ -26,7 +26,7 @@ body {
   color: #ca7497;
   font-size: 16px;
 }
-
+/*
 #wrapper{
 position:absolute;
 top:0px;
@@ -36,3 +36,4 @@ height: 90vh;
   z-index: 9999;
   
 }
+*/
